--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,9 +8,52 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>Pars Panel</title>
+		<style>
+      :root {
+        --bg-color: #f9fafb;
+        --text-color: #111827;
+        --accent-color: #2563eb;
+        --font-family: "Inter", system-ui, sans-serif;
+      }
+
+	  @media (prefers-color-scheme: dark) {
+        :root {
+          --bg-color: #0f172a;
+          --text-color: #f8fafc;
+          --subtext-color: #94a3b8;
+          --accent-color: #3b82f6;
+        }
+      }
+
+      body {
+        margin: 0;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        background-color: var(--bg-color);
+        color: var(--text-color);
+        font-family: var(--font-family);
+      }
+
+      h1 {
+        font-size: 2.5rem;
+        font-weight: 700;
+        margin-bottom: 0.5rem;
+      }
+
+      p {
+        font-size: 1.2rem;
+        color: #4b5563;
+      }
+    </style>
 	</head>
 	<body>
-		<h1>Astro</h1>
+		<img src="./favicon.svg" width="90" alt="Pars Panel Logo">
+		<h1>Pars Panel</h1>
+		<p>Website is under constracution.</p>
 	</body>
 </html>
